# String_Wind_Subtractive

./: .gitignore  CMakeLists.txt  development_plan.txt
include/: ascii_info.hpp  coord.hpp  display_manager.hpp  image_analysis.hpp  image_editing.hpp  line.hpp  line_iterator.hpp  string_art.hpp
src/: main.cpp
src/coordinates/: CMakeLists.txt  line.cpp
src/image/: CMakeLists.txt  image_analysis.cpp  image_editing.cpp  line_iterator.cpp  string_art.cpp
src/lib/color/: conversion.hpp
src/lib/coordinates/: coord.hpp  coord_cimg_plugin.h  line.hpp  line_iterator.cpp  line_iterator.hpp
src/lib/image/: a.out  ascii_info.cpp  ascii_info.hpp  display_manager.cpp  display_manager.hpp  image_analysis.hpp  image_editing.hpp  line_map.hpp  output.hpp  string_art.cpp  string_art.hpp
src/output/: CMakeLists.txt  ascii_info.cpp  display_manager.cpp
